# bucket-graph-spprc

./: .zenodo.json  CITATION.cff  CMakeLists.txt  README.md
benchmarks/: README.md  build_comparison_pathwyse.py  compute_means.py  convert_to_pathwyse.py  pathwyse.csv  run_benchmarks.sh  run_pathwyse.sh
benchmarks/patches/: pathwyse-pure-ng.patch
cli/: instance_io.h  main.cpp  version.h.in
cmake/: generate_version.cmake
docs/superpowers/specs/: 2026-06-25-ng-minplus-gpu-pricing-design.md
outs/spprclib_bgspprc/: README.md
outs/spprclib_bgspprc/20260625_200720/: bgspprc.csv
tests/: test_cli.sh  test_instance_io.cpp
